<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity" android:orientation="vertical">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/nama_paket_umrah"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:id="@+id/tv_det_namapaket"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/img_det_paket"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:src="@android:color/darker_gray"/>

        </LinearLayout>
        <TextView
                android:id="@+id/tv_det_hargapaket"
                android:text="@string/harga_paket"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@android:color/holo_red_light"
                />
        <TextView
                android:text="@string/detail_paket"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="18dp">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <TextView
                        android:textColor="@android:color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_fasilitas"/>
                <TextView
                        android:text="@string/fasilitas_content"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvc_fasilitas"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <TextView
                android:text="@string/syarat_ketentuan"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="18dp">

            <TextView
                    android:text="@string/syarat_ketentuan_content"
                    android:textColor="@android:color/black"
                    android:justificationMode="inter_word"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvc_syarat_ketentuan"/>
        </androidx.cardview.widget.CardView>

        <Button
                android:id="@+id/btn_daftar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daftar_sekarang"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
        />

    </LinearLayout>

</ScrollView>