<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        tools:context=".AboutActivity"
>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="405dp"
    >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:background="@drawable/bg_gradient"
                android:orientation="vertical"
        >

            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_about"
                    android:layout_marginTop="50dp"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@android:color/darker_gray"

            />
            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/myname"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="21sp"/>

        </LinearLayout>
        <androidx.cardview.widget.CardView
                android:layout_width="400dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="275dp"
        >
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3"
            >
                <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/twitter"
                            android:focusable="true"
                            android:clickable="true"
                            android:contentDescription="@string/twitter"
                    />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/twitter"
                    />

                </LinearLayout>
                <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/instagram"
                            android:focusable="true"
                            android:clickable="true"
                    />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/instagram"
                    />

                </LinearLayout>
                <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/linkedin"
                            android:focusable="true"
                            android:clickable="true"
                    />
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/linkedin"
                    />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="45dp">
        <LinearLayout
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/outline_mail_outline_black_24dp"/>
            <TextView
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/email_me"/>
        </LinearLayout>

        <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/outline_location_on_black_24dp"/>
            <TextView
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/mycity"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/outline_public_black_24dp"/>
            <TextView
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/my_web"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:clickable="true"
                    android:focusable="true"
            />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>






